--- a/ui/apps/io.ox/calendar/week/style.css
+++ b/ui/apps/io.ox/calendar/week/style.css
@@ -273,9 +273,10 @@
 
     /* shown_as colors */
     @appointment-reserved: #08c; /* blue */ 
-    @appointment-temporary: #FFBB00; /* yellow */ 
-    @appointment-absent: #913F3F; /* red */ 
-    @appointment-free: #8EB360; /* green */ 
+    @appointment-temporary: #ffbb00; /* yellow */ 
+    @appointment-absent: #913f3f; /* red */ 
+    @appointment-free: #8eb360; /* green */
+    @appointment-private: #ccc; /* grey */
     
     @appointment-unconfirmed-alpha: 0.4;
     @appointment-declined-alpha: 0.1;
@@ -288,6 +289,11 @@
         margin-right: 3px;
     }
     
+    .appointment.private {
+        cursor: normal;
+        background-color: @appointment-private;
+    }
+
     .appointment.reserved {
         background-color: @appointment-reserved;
     }
